syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
package Dto;

message PlayerShopDto {
  int32 channel = 1;
  string mapName = 2;
  bool isOpen = 3;
  int32 type = 4;
}
